<resources>
    <string-array name="menu">
        <item>Setting</item>
        <item>Help</item>
    </string-array>
    <string name="deleting">Deleting</string>
    <string name="check_all">Check all</string>
    <string name="menu_delete">Delete</string>
    <string name="app_name">Sistrânsito Móvel</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_world">Olá Mundo!</string>
    <string name="logo">logo</string>
    <string name="first_three_letter">Letras</string>
    <string name="last_four_number">Números</string>
    <string name="p_first_three_letter">Please enter three letter</string>
    <string name="p_last_four_number">Please enter four number</string>
    <string name="invalid_input">Invalid input</string>
    <string name="please_enter_cnh_uer_name">Please enter your cnh user name</string>
    <string name="cnh_user_name">Cnh user name</string>
    <string name="place_format">Placa :&#160;</string>
    <string name="model_format">Marca/Modelo :&#160;</string>
    <string name="cor_format">Cor :&#160;</string>
    <string name="tipo_format">Tipo :&#160;</string>
    <string name="ano_licenciamento_format">Ano Licenciamento :&#160;</string>
    <string name="data_licenciamento_format">Data Licenciamento :&#160;</string>
    <string name="licenciamento_format">Licenciamento :&#160;</string>
    <string name="ipva_format">IPVA :&#160;</string>
    <string name="seguro_format">Seguro :&#160;</string>
    <string name="multas_format">Multas :&#160;</string>
    <string name="restricoes_format">Restricoes :&#160;</string>
    <string name="date_format">Date :&#160;</string>
    <string name="model">Marca/Modelo</string>
    <string name="consulta_off_line">Consulta off-line</string>
    <string name="lets_go">Let\'s go</string>
    <string name="login_hint">Logar in your Sistransito Mobile\naccount</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="register">Cadastrar</string>
    <string name="forgetPassword">Forget your passowrd?</string>
    <string name="name">Nome</string>
    <string name="autority">Órgão de trânsito</string>
    <string name="sign_up">Sign up</string>
    <string name="cpf">CPF</string>
    <string name="register_hint">Cadastrar into Sistransito Mobile</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your senha</string>
    <string name="mantenha_me_logado">Mantenha-me logado</string>
    <string name="no_result_found">Nenhum dado retornado</string>
    <string name="auto_de_infracao">Auto de infração</string>
    <string name="infracao">Infração</string>
    <string name="condutor">Condutor</string>
    <string name="cnf_tittle_hint">Digite o Registro, Nome ou CPF</string>
    <string name="off_line_search">Off line search</string>
    <string name="encrypt_key">SandroACosta</string>
    <string name="sem_conexao">Sem conexão com a internet</string>
    <string name="erro_input">Dados inválidos</string>
    <string name="carregando">Carregando &#8230;&#8230;&#8230;\n</string>
    <string name="erro_login">Login ou senha inválido</string>
    <string name="impressao">Módulo de impressão</string>
    <string name="acesso_ao_sistransito">Acesso ao sistransito</string>
    <string name="matricula">Matrícula</string>
    <string name="nome">Nome</string>
    <string name="orgao_de_transito">Órgão de trânsito</string>
    <string name="logout">logout</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="tca_dados_do_fato">Dados do Fato</string>
    <string name="tca_conferir">Conferir</string>
    <string name="tca_gerar">Gerar</string>
    <string name="tca_se_constatei">Se constatei que o condutor fez uso de substância tóxica, entorpecente ou efeito análogo ?</string>
    <string name="tca_conclusao">Conclusão</string>
    <string name="tca_fala_alterada">&#160;fala alterada</string>
    <string name="tca_dificuldade_no_equilíbrio">&#160;dificuldade no equilíbrio</string>
    <string name="tca_em_relacao_a_sua">Em relação a sua capacidade motora e verbal ocorre:</string>
    <string name="tca_lembra_dos_atos_cometidos">lembra dos atos cometidos ?</string>
    <string name="tca_sabe_seu_enderecao">sabe seu endereço ?</string>
    <string name="tca_em_relacao_a_sua_memoria">Em relação a sua memória:</string>
    <string name="tca_sabe_a_data_e_a_hora">sabe a data e a hora ?</string>
    <string name="tca_sabe_onde_esta">sabe onde está ?</string>
    <string name="tca_em_relacao_a_sua_orientacao">Em relação a sua orientação:</string>
    <string name="tca_dispersao">&#160;dispersão</string>
    <string name="tca_exaltacao">&#160;exaltação</string>
    <string name="tca_falante">&#160;falante</string>
    <string name="tca_arrogancia">arrogância</string>
    <string name="tca_ironia">&#160;ironia</string>
    <string name="tca_agressividade">&#160;agressividade</string>
    <string name="tca_em_sua_atitude_ocorre">Em sua atitude ocorre:</string>
    <string name="tca_odor_de_alcool_no_halito">odor de álcool no hálito</string>
    <string name="tca_vomitos">&#160;vômitos</string>
    <string name="tca_desordem_nas_vertes">&#160;desordem nas vertes</string>
    <string name="tca_olhos_vermelhos">&#160;olhos vermelhos</string>
    <string name="tca_solucos">&#160;soluços</string>
    <string name="tca_sonolencia">&#160;sonolência</string>
    <string name="tca_o_condutor_apresenta">O condutor apresenta sinais de:</string>
    <string name="tca_title_nao">&#160;não</string>
    <string name="tca_sim">&#160;sim</string>
    <string name="tca_condutor_3">condutor declara ter feito uso de substância tóxica, entorpecente ou efeito análogo ?</string>
    <string name="tca_condutor_2">condutor declara ter ingerido bebida alcoólica ?</string>
    <string name="tca_condutor_1">condutor envolveu-se em acidente de trânsito ?</string>
    <string name="tca_relato_quanto_ao">Relato Quanto ao Estado do Condutor</string>
    <string name="tca_n_auto">Nº Auto</string>
    <string name="tca_hora">Hora</string>
    <string name="tca_data">Data </string>
    <string name="tca_local_da_ocorrencia">Local da ocorrência</string>
    <string name="tca_marca_modelo">Marca/Modelo</string>
    <string name="tca_placa">Placa</string>
    <string name="tca_identificacao_do_veiculo">Identificação do Veículo</string>
    <string name="tca_UF">UF</string>
    <string name="tca_municipio">Município</string>
    <string name="tca_bairro">Bairro</string>
    <string name="tca_endereco">Endereço</string>
    <string name="tca_CPF">CPF</string>
    <string name="tca_CNH_PPD">CNH/PPD</string>
    <string name="tca_nome">Nome</string>
    <string name="tca_identificacao_d_condutor">Identificação do Condutor</string>
    <string name="t_v_nome_da_empresa">Nome da Empresa</string>
    <string name="t_v_nome_do_condutor_do_guincho">Nome do condutor do guincho</string>
    <string name="t_v_acessorios">Acessórios</string>
    <string name="t_v_total">Total</string>
    <string name="t_v_estrutura">Estrutura</string>
    <string name="t_v_parcial">Parcial</string>
    <string name="t_v_cabeca_de_alavanca">Cabeça de alavanca</string>
    <string name="t_v_carroceria">Carroceria</string>
    <string name="t_v_forro">Forro</string>
    <string name="t_v_lataria_capo">Lataria capô</string>
    <string name="t_v_lataria_lado_direito">Lataria lado direito</string>
    <string name="t_v_lataria_lado_esquerdo">Lataria lado esquerdo</string>
    <string name="t_v_lataria_tapa_porta_mala">Lataria tapa porta mala</string>
    <string name="t_v_lataria_teto">Lataria teto</string>
    <string name="t_v_motor">Motor</string>
    <string name="t_v_painel">Painel</string>
    <string name="t_v_pintura_capo">Pintura capô</string>
    <string name="t_v_pintura_lado_direito">Pintura lado direito</string>
    <string name="t_v_pintura_lado_esquerdo">Pintura lado esquerdo</string>
    <string name="t_v_pintura_porta_mala">Pintura porta mala</string>
    <string name="t_v_pintura_teto">Pintura teto</string>
    <string name="t_v_radiador">Radiador</string>
    <string name="t_v_vidros_laterais">Vidros laterais</string>
    <string name="t_v_vidro_para_brisa">Vidro para-brisa</string>
    <string name="t_v_vidro_traseiro">Vidro traseiro</string>
    <string name="acessorio_antena">Antena de rádio</string>
    <string name="acessorio_bagageiro">Bagageiro</string>
    <string name="acessorio_bancos">Bancos</string>
    <string name="acessorio_bateria">Bateria</string>
    <string name="acessorio_calota">Calota</string>
    <string name="acessorio_ar">Ar condicionado</string>
    <string name="acessorio_exintor">Extintor de incêndio</string>
    <string name="acessorio_farol_dianteiro">Farolete dianteiro</string>
    <string name="acessorio_farol_traseiro">Farolete traseiro</string>
    <string name="acessorio_macaco">Macaco</string>
    <string name="acessorio_para_choque_dianteiro">Pára-choque dianteiro</string>
    <string name="acessorio_para_choque_traseiro">Pára-choque traseiro</string>
    <string name="acessorio_para_sol">Pára-sol do condutor</string>
    <string name="acessorio_pneus">Pneus</string>
    <string name="acessorio_estepe">Pneus estepe</string>
    <string name="acessorio_radio">Rádio</string>
    <string name="acessorio_retrovisor_interno">Retrovisor interno</string>
    <string name="acessorio_retrovisor_externo">Retrovisor externo direito</string>
    <string name="acessorio_tapete">Tapete</string>
    <string name="acessorio_triangulo">Triângulo</string>
    <string name="acessorio_volante">Volante</string>
    <string name="acessorio_guidam">Guidan</string>
    <string name="t_v_selecionar_tudo">Selecionar tudo</string>
    <string name="tav_condicoes_do_veiculo">Condições do Veículo</string>
    <string name="t_v_item">Item</string>
    <string name="t_v_danos">Danos</string>
    <string name="tav_numero_do_auto">Número do Auto</string>
    <string name="tav_CPF_CNPJ">CPF/CNPJ</string>
    <string name="tav_nome_do_proprietario">Nome do proprietário</string>
    <string name="tav_odometro">Odômetro</string>
    <string name="tav_danificado">&#160;Danificado</string>
    <string name="tav_vazio">&#160;Vazio</string>
    <string name="tav_14">&#160;&#188;</string>
    <string name="tav_12"> &#160;&#189;</string>
    <string name="tav_34"> &#160;&#190;</string>
    <string name="tav_cheio">&#160;Cheio</string>
    <string name="tav_remocao_atraves_de">Remoção através de:</string>
    <string name="tav_guincho">Guincho </string>
    <string name="tav_condutor">Condutor</string>
    <string name="tav_marcador_de_conbutivel">Marcador de conbutível</string>
    <string name="tav_numero_do_Renavam">Número do Renavam</string>
    <string name="tav_numero_do_chassi">Número do chassi</string>
    <string name="rrd_qtd_de_dias_para_regularizacao">Qtd de dias para regularização</string>
    <string name="conferir">Conferir</string>
    <string name="CNH">&#160;CNH </string>
    <string name="CLRV">&#160;CLRV</string>
    <string name="PPD">&#160;PPD </string>
    <string name="procedimentos">Procedimentos em relação ao veículo</string>
    <string name="retencao">&#160;Retenção</string>
    <string name="remocao">&#160;Remoção</string>
    <string name="observacao">Observação</string>
    <string name="identificacao_do_embarcador">Identificação do embarcador ou expedidor</string>
    <string name="CNPJ_CPF">CNPJ/CPF</string>
    <string name="identificacao_do_transportador">Identificação do transportador</string>
    <string name="recolhimento_de_documentos">Recolhimento de documentos</string>
    <string name="gerar">Gerar</string>
    <string name="delete">Excluir</string>
    <string name="listar_placas">Placas consultadas</string>
</resources>