<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:background="@color/yellow"
    android:padding="0dip" >

    <ImageButton
        android:id="@+id/im_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_back_background"
        android:contentDescription="@string/login"
        android:padding="@dimen/widght_margin"
        android:src="@drawable/btn_back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/listar_placas"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/im_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/im_btn_back"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/im_btn_back"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/widght_margin"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:padding="@dimen/widght_padding"
        android:src="@drawable/btn_delete" />

</RelativeLayout>